clusters/homelab/apps/platform/rancher/patch-ingress.yaml
# gitops/clusters/homelab/apps/platform/rancher/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  namespace: cattle-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["rancher.support4u.se"]
      secretName: tls-rancher-ingress
  rules:
    - host: rancher.support4u.se
